# tirea

./: .gitignore  Cargo.toml  README.md
crates/tirea/: Cargo.toml
crates/tirea-agent-loop/: Cargo.toml
crates/tirea-agent-loop/src/engine/: convert.rs  tool_execution.rs
crates/tirea-agent-loop/src/runtime/: control.rs  run_context.rs  streaming.rs
crates/tirea-agent-loop/src/runtime/loop_runner/: config.rs  core.rs  effect_applicator.rs  mod.rs  plugin_runtime.rs  run_state.rs  state_commit.rs  stream_runner.rs  tests.rs  tool_exec.rs  truncation_recovery.rs
crates/tirea-agent-loop/tests/: otel_telemetry.rs  phoenix_observability_e2e.rs  skills_integration.rs
crates/tirea-agentos/: Cargo.toml
crates/tirea-agentos-server/: Cargo.toml
crates/tirea-agentos-server/src/: http.rs  main.rs  service.rs
crates/tirea-agentos-server/src/protocol/a2a/: http.rs
crates/tirea-agentos-server/src/protocol/acp/: stdio.rs
crates/tirea-agentos-server/src/protocol/ag_ui/: http.rs  nats.rs  runtime.rs
crates/tirea-agentos-server/src/protocol/ai_sdk_v6/: http.rs  nats.rs  runtime.rs
crates/tirea-agentos-server/src/service/: api.rs  mailbox.rs  mailbox_service.rs  mod.rs  run.rs
crates/tirea-agentos-server/src/transport/: mod.rs  nats.rs  runtime_endpoint.rs
crates/tirea-agentos-server/tests/: a2a_http.rs  a2a_self_validation.rs  acp_stdio.rs  e2e_deepseek.rs  e2e_http_matrix.rs  e2e_nats_postgres.rs  e2e_tensorzero.rs  explicit_composition.rs  http_api.rs  nats_gateway.rs  phoenix_observability_e2e.rs  protocol_parity.rs  run_api.rs
crates/tirea-agentos-server/tests/common/: mod.rs
crates/tirea-agentos/src/: lib.rs
crates/tirea-agentos/src/builtin_tools/: mod.rs  read_file.rs
crates/tirea-agentos/src/composition/: builder.rs  bundle.rs  config.rs  errors.rs  mod.rs  wiring.rs
crates/tirea-agentos/src/composition/registry/: mod.rs  (+7 more)
crates/tirea-agentos/src/engine/: token_estimator.rs
crates/tirea-agentos/src/orchestrator/: builder.rs  composite_behavior.rs  mod.rs  run.rs  stop_policy_plugin.rs  tests.rs  truncation_recovery_plugin.rs  wiring.rs
crates/tirea-agentos/src/runtime/: behavior.rs  errors.rs  mod.rs  policy.rs  prepare.rs  resolve.rs  run.rs  run_context.rs  streaming.rs  tests.rs  types.rs
crates/tirea-agentos/tests/: mock_nested_subagent.rs  otel_telemetry.rs  phoenix_observability_e2e.rs  skills_integration.rs
crates/tirea-contract/: Cargo.toml
crates/tirea-contract/src/: lib.rs  scope.rs  testing.rs
crates/tirea-contract/src/runtime/: action.rs  activity.rs  behavior.rs  mod.rs  state_paths.rs
crates/tirea-contract/src/storage/: mailbox_traits.rs  mailbox_types.rs  mod.rs  run_types.rs
crates/tirea-contract/src/thread/: changeset.rs
crates/tirea-extension-a2ui/: Cargo.toml
crates/tirea-extension-mcp/: Cargo.toml
crates/tirea-extension-mcp/src/: client_transport.rs  lib.rs
crates/tirea-extension-mcp/tests/: mcp_sampling_e2e.rs  mcp_ui_e2e.rs
crates/tirea-extension-mcp/tests/support/: test_server.rs
crates/tirea-extension-observability/: Cargo.toml
crates/tirea-extension-observability/src/: lib.rs  plugin.rs  spans.rs
crates/tirea-extension-permission/: Cargo.toml
crates/tirea-extension-permission/src/: form.rs  lib.rs  mechanism.rs  model.rs  plugin.rs  state.rs  strategy.rs
crates/tirea-extension-reminder/: Cargo.toml
crates/tirea-extension-reminder/src/: lib.rs  state.rs
crates/tirea-extension-skills/: Cargo.toml
crates/tirea-extension-skills/src/: combined_plugin.rs  discovery_plugin.rs  lib.rs  runtime_plugin.rs  subsystem.rs  tools.rs  types.rs
crates/tirea-protocol-ag-ui/: Cargo.toml
crates/tirea-protocol-ag-ui/src/: context.rs
crates/tirea-protocol-ag-ui/tests/: agent_integration.rs  skills_agui_wiring.rs
crates/tirea-protocol-ai-sdk-v6/: Cargo.toml
crates/tirea-protocol-ai-sdk-v6/src/: encoder.rs
crates/tirea-protocol-ai-sdk-v6/tests/: mcp_progress_stream_e2e.rs
crates/tirea-state/: Cargo.toml
crates/tirea-state-derive/: Cargo.toml
crates/tirea-state-derive/src/: field_kind.rs  lib.rs  parse.rs
crates/tirea-state-derive/src/codegen/: lattice_impl.rs  mod.rs  state_ref.rs
crates/tirea-state-derive/tests/: compile_fail.rs
crates/tirea-state-derive/tests/ui/: derive_lattice_enum.rs  derive_lattice_enum.stderr  derive_lattice_tuple_struct.rs  derive_lattice_tuple_struct.stderr  derive_lattice_unit_struct.rs  derive_lattice_unit_struct.stderr  lattice_and_flatten.rs  lattice_and_flatten.stderr  lattice_and_nested.rs  lattice_and_nested.stderr  lattice_on_map.rs  lattice_on_map.stderr  lattice_on_option.rs  lattice_on_option.stderr  lattice_on_vec.rs  lattice_on_vec.stderr
crates/tirea-state/src/: delta_tracked.rs  lib.rs  state.rs
crates/tirea-state/src/lattice/: registry.rs
crates/tirea-state/tests/: lattice_composite_tests.rs  lattice_conflict_tests.rs
crates/tirea-store-adapters/: Cargo.toml
crates/tirea-store-adapters/src/: file_run_store.rs  file_store.rs  file_utils.rs  lib.rs  memory_run_store.rs  memory_store.rs  postgres_store.rs
crates/tirea-store-adapters/tests/: memory_store.rs  nats_buffered.rs  postgres_store.rs
crates/tirea/src/: lib.rs  prelude.rs
crates/tirea/tests/: compile_fail.rs
examples/: Cargo.toml
examples/ai-sdk-starter/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
examples/ai-sdk-starter/agent/: Cargo.toml
examples/ai-sdk-starter/agent/src/: main.rs  state.rs  tools.rs
examples/ai-sdk-starter/src/: app.tsx  globals.css  main.tsx
examples/ai-sdk-starter/src/hooks/: use-chat-session.ts  use-threads.ts
examples/ai-sdk-starter/src/lib/: api-client.test.ts  api-client.ts  recommended-actions.ts  session.ts  transport.test.ts  transport.ts
examples/ai-sdk-starter/src/pages/: basic-page.tsx  canvas-page.tsx  playground-page.tsx  threads-page.tsx
examples/copilotkit-starter/: README.md
examples/copilotkit-starter/agent/: Cargo.toml
examples/research-ui/: README.md
examples/src/: lib.rs
examples/src/starter_backend/: mod.rs
examples/travel-ui/: README.md
(+161 files in other folders)
