[workspace]
resolver = "2"
members = [
    "crates/tirea-state",
    "crates/tirea-state-derive",
    "crates/tirea-contract",
    "crates/tirea-agent-loop",
    "crates/tirea-agentos",
    "crates/tirea-extension-permission",
    "crates/tirea-extension-reminder",
    "crates/tirea-extension-observability",
    "crates/tirea-extension-skills",
    "crates/tirea-extension-mcp",
    "crates/tirea-protocol-ag-ui",
    "crates/tirea-protocol-ai-sdk-v6",
    "crates/tirea",
    "crates/tirea-store-adapters",
    "crates/tirea-agentos-server",
    "examples",
    "examples/copilotkit-starter/agent",
    "examples/ai-sdk-starter/agent",
    "e2e/phoenix/test-helpers",
]

[workspace.package]
version = "0.3.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tirea-ai/tirea"

[workspace.dependencies]
# Internal crates
tirea-state = { version = "0.3.0-dev", path = "crates/tirea-state" }
tirea-state-derive = { version = "0.3.0-dev", path = "crates/tirea-state-derive" }
tirea-contract = { version = "0.3.0-dev", path = "crates/tirea-contract" }
tirea-agent-loop = { version = "0.3.0-dev", path = "crates/tirea-agent-loop" }
tirea-agentos = { version = "0.3.0-dev", path = "crates/tirea-agentos" }
tirea-agentos-server = { version = "0.3.0-dev", path = "crates/tirea-agentos-server" }
tirea-extension-permission = { version = "0.3.0-dev", path = "crates/tirea-extension-permission" }
tirea-extension-reminder = { version = "0.3.0-dev", path = "crates/tirea-extension-reminder" }
tirea-extension-observability = { version = "0.3.0-dev", path = "crates/tirea-extension-observability" }
tirea-extension-skills = { version = "0.3.0-dev", path = "crates/tirea-extension-skills" }
tirea-extension-mcp = { version = "0.3.0-dev", path = "crates/tirea-extension-mcp" }
tirea-protocol-ag-ui = { version = "0.3.0-dev", path = "crates/tirea-protocol-ag-ui" }
tirea-protocol-ai-sdk-v6 = { version = "0.3.0-dev", path = "crates/tirea-protocol-ai-sdk-v6" }
tirea = { version = "0.3.0-dev", path = "crates/tirea" }
tirea-store-adapters = { version = "0.3.0-dev", path = "crates/tirea-store-adapters" }
tirea-examples = { version = "0.3.0-dev", path = "examples" }
phoenix-test-helpers = { version = "0.3.0-dev", path = "e2e/phoenix/test-helpers" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
jsonschema = "0.38"

# Error handling
thiserror = "2"

# Proc-macro dependencies
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
darling = "0.20"

# Async runtime
tokio = { version = "1", default-features = false }

# Testing
trybuild = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"

[patch.crates-io]
genai = { git = "https://github.com/tirea-ai/rust-genai.git", rev = "d4efba7b1ba1aea49e9f0fe019f3f83c3e9440ae" }
