[package]
name = "tirea-examples"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
tirea-agentos = { workspace = true, features = ["mcp"] }
tirea-agentos-server.workspace = true
tirea-extension-permission.workspace = true
tirea-extension-mcp.workspace = true
tirea-store-adapters.workspace = true
tirea-state.workspace = true
tirea-state-derive.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { workspace = true }
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
clap = { version = "4", features = ["derive", "env"] }
genai = "0.6.0-beta.3"
axum = { version = "0.7", default-features = false, features = ["http1", "json", "query", "tokio"] }
mcp = { package = "model-context-protocol", version = "0.2", default-features = false, features = ["client"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "travel"
path = "src/travel.rs"

[[bin]]
name = "research"
path = "src/research.rs"
