[package]
name = "tirea-agent-loop"
version.workspace = true
edition = "2021"
description = "Core agent execution loop and runtime for tirea"
license = "MIT OR Apache-2.0"
repository.workspace = true

[dependencies]
tirea-state.workspace = true
tirea-contract.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "time", "process"] }
thiserror = "2"
genai = "0.6.0-beta.3"
futures = "0.3"
async-stream = "0.3"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "v7"] }
tokio-util = "0.7"
json-patch = "3"

[dev-dependencies]
tirea-contract = { workspace = true, features = ["test-support"] }
tirea-state = { workspace = true, features = ["derive"] }
tirea-extension-observability.workspace = true
tirea-extension-permission.workspace = true
tirea-extension-skills.workspace = true
tirea-store-adapters.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio", "testing"] }
opentelemetry-otlp = { version = "0.28", default-features = false, features = ["http-proto", "reqwest-blocking-client", "trace"] }
tracing-opentelemetry = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
phoenix-test-helpers.workspace = true
criterion.workspace = true
trybuild.workspace = true

[lints]
workspace = true
