[package]
name = "tirea-agentos-server"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"
repository.workspace = true
description = "HTTP/SSE/NATS gateway for tirea AgentOs"

[dependencies]
tirea-contract.workspace = true
tirea-extension-permission = { workspace = true, optional = true }
tirea-agent-loop.workspace = true
tirea-agentos.workspace = true
tirea-protocol-ag-ui.workspace = true
tirea-protocol-ai-sdk-v6.workspace = true
tirea-store-adapters = { workspace = true, features = ["nats", "postgres"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
futures = "0.3"
async-stream = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4", "v7"] }

axum = { version = "0.7", default-features = false, features = ["http1", "json", "query", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"

clap = { version = "4", features = ["derive", "env"] }
async-nats = "0.38"
genai = "0.6.0-beta.4"

[features]
default = ["permission"]
permission = ["dep:tirea-extension-permission", "tirea-agentos/permission"]

[dev-dependencies]
tirea-contract = { workspace = true, features = ["test-support"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
async-trait = "0.1"
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["nats", "postgres"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], default-features = false }
phoenix-test-helpers = { path = "../../e2e/phoenix/test-helpers" }
