[package]
name = "tirea-agentos"
version.workspace = true
edition = "2021"
description = "AgentOS orchestration layer for tirea"
license = "MIT OR Apache-2.0"
repository.workspace = true

[dependencies]
tirea-state = { version = "0.2.0", path = "../tirea-state" }
tirea-contract = { version = "0.2.0", path = "../tirea-contract" }
tirea-agent-loop = { version = "0.2.0", path = "../tirea-agent-loop" }
tirea-extension-permission = { version = "0.2.0", path = "../tirea-extension-permission", optional = true }
tirea-extension-reminder = { version = "0.2.0", path = "../tirea-extension-reminder", optional = true }
tirea-extension-observability = { version = "0.2.0", path = "../tirea-extension-observability", optional = true }
tirea-extension-skills = { version = "0.2.0", path = "../tirea-extension-skills", optional = true }
tirea-extension-mcp = { version = "0.2.0", path = "../tirea-extension-mcp", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "time", "process"] }
thiserror = "2"
genai = "0.6.0-beta.3"
futures = "0.3"
uuid = { version = "1", features = ["v4", "v7"] }

[features]
default = ["skills", "permission", "reminder", "observability"]
skills = ["dep:tirea-extension-skills"]
permission = ["dep:tirea-extension-permission"]
reminder = ["dep:tirea-extension-reminder"]
observability = ["dep:tirea-extension-observability"]
mcp = ["dep:tirea-extension-mcp"]

[dev-dependencies]
tirea-contract = { version = "0.2.0", path = "../tirea-contract", features = ["test-support"] }
tirea-store-adapters = { version = "0.2.0", path = "../tirea-store-adapters" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
mcp = { package = "model-context-protocol", version = "0.2", default-features = false, features = ["client"] }

[lints]
workspace = true
