[package]
name = "tirea-agentos"
version.workspace = true
edition = "2021"
description = "AgentOS orchestration layer for tirea"
license = "MIT OR Apache-2.0"
repository.workspace = true

[dependencies]
tirea-state.workspace = true
tirea-contract.workspace = true
tirea-agent-loop.workspace = true
tirea-extension-permission = { workspace = true, optional = true }
tirea-extension-reminder = { workspace = true, optional = true }
tirea-extension-observability = { workspace = true, optional = true }
tirea-extension-skills = { workspace = true, optional = true }
tirea-extension-mcp = { workspace = true, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "time", "process"] }
thiserror = "2"
genai = "0.6.0-beta.3"
futures = "0.3"
uuid = { version = "1", features = ["v4", "v7"] }

[features]
default = ["skills", "permission", "reminder", "observability"]
skills = ["dep:tirea-extension-skills"]
permission = ["dep:tirea-extension-permission"]
reminder = ["dep:tirea-extension-reminder"]
observability = ["dep:tirea-extension-observability"]
mcp = ["dep:tirea-extension-mcp"]

[dev-dependencies]
tirea-contract = { workspace = true, features = ["test-support"] }
tirea-store-adapters.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
mcp = { package = "model-context-protocol", version = "0.2", default-features = false, features = ["client"] }

[lints]
workspace = true
