[package]
name = "tirea-contract"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"
repository.workspace = true
description = "Agent runtime contracts: 8-phase plugin lifecycle, typed tool traits, and state scope system"
keywords = ["ai-agent", "llm", "agent-framework", "spi"]
categories = ["asynchronous"]

[dependencies]
tirea-state = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
schemars = { workspace = true }
jsonschema = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
futures = "0.3"
tokio-util = "0.7"
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4", "v7"] }

[features]
test-support = []

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
