[package]
name = "tirea-extension-a2ui"
version.workspace = true
edition = "2021"
description = "Render interactive UI components to the frontend via AG-UI protocol for tirea"
license = "MIT OR Apache-2.0"
repository.workspace = true

[dependencies]
tirea-contract.workspace = true
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"

[dev-dependencies]
tirea-contract = { workspace = true, features = ["test-support"] }
tirea-state.workspace = true
tokio = { version = "1", features = ["rt", "macros"] }
