[package]
name = "tirea-extension-mcp"
version.workspace = true
edition = "2021"
description = "MCP extension for tirea"
license = "MIT OR Apache-2.0"
repository.workspace = true

[dependencies]
tirea-contract = { version = "0.2.0", path = "../tirea-contract" }
async-trait = "0.1"
serde_json = "1"
thiserror = "2"
mcp = { package = "model-context-protocol", version = "0.2", default-features = false, features = ["client"] }
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "net", "rt", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tirea-contract = { version = "0.2.0", path = "../tirea-contract", features = ["test-support"] }
tirea-state = { version = "0.2.0", path = "../tirea-state" }
mcp = { package = "model-context-protocol", version = "0.2", default-features = false, features = ["client"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "time", "sync"] }
