[package]
name = "tirea-extension-mcp"
version.workspace = true
edition = "2021"
description = "MCP extension for tirea"
license = "MIT OR Apache-2.0"
repository.workspace = true

[dependencies]
tirea-contract.workspace = true
async-trait = "0.1"
serde_json = "1"
thiserror = "2"
mcp = { package = "model-context-protocol", version = "0.2", default-features = false, features = ["client"] }
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "net", "process", "rt", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"

[dev-dependencies]
tirea-contract = { workspace = true, features = ["test-support"] }
tirea-state.workspace = true
mcp = { package = "model-context-protocol", version = "0.2", default-features = false, features = ["client"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "time", "sync"] }
