[package]
name = "tirea-extension-observability"
version.workspace = true
edition = "2021"
description = "Observability extension for tirea"
license = "MIT OR Apache-2.0"
repository.workspace = true

[dependencies]
tirea-state.workspace = true
tirea-contract.workspace = true
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
genai = "0.6.0-beta.3"
tracing = "0.1"

[dev-dependencies]
tirea-contract = { workspace = true, features = ["test-support"] }
futures = "0.3"
tokio = { version = "1", features = ["rt", "macros", "time"] }
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio", "testing"] }
tracing-opentelemetry = "0.29"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }
