[package]
name = "tirea-extension-reminder"
version.workspace = true
edition = "2021"
description = "Persistent reminders that survive across agent turns for tirea"
license = "MIT OR Apache-2.0"
repository.workspace = true
keywords = ["agent", "llm", "reminder", "context"]
categories = ["asynchronous"]

[dependencies]
tirea-state = { workspace = true, features = ["derive"] }
tirea-contract.workspace = true
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tirea-contract = { workspace = true, features = ["test-support"] }
tokio = { version = "1", features = ["rt", "macros"] }
