[package]
name = "tirea-protocol-ag-ui"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"
repository.workspace = true
description = "AG-UI protocol types and adapters for tirea"

[dependencies]
tirea-contract.workspace = true
tirea-state.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
json-patch = "3"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "v7"] }

[dev-dependencies]
tirea-contract = { workspace = true, features = ["test-support"] }
tirea-agentos.workspace = true
async-trait = "0.1"
tirea-state = { workspace = true, features = ["derive"] }
tirea-store-adapters.workspace = true
futures = "0.3"
genai = "0.6.0-beta.3"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }

[lints]
workspace = true
