[package]
name = "tirea-protocol-ai-sdk-v6"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"
repository.workspace = true
description = "AI SDK v6 protocol types and adapters for tirea"

[dependencies]
tirea-contract.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = "0.1"

[dev-dependencies]
async-trait = "0.1"
futures = "0.3"
genai = "0.6.0-beta.3"
mcp = { package = "model-context-protocol", version = "0.2", default-features = false, features = ["client"] }
tirea-agent-loop.workspace = true
tirea-extension-mcp.workspace = true
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread"] }

[lints]
workspace = true
