[package]
name = "tirea-state-derive"
description = "Derive macros for typed AI agent state with CRDT lattice support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["ai-agent", "derive", "crdt", "state"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
darling.workspace = true

[dev-dependencies]
trybuild.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
