[package]
name = "tirea-state"
description = "Typed state management with derive macros, CRDT lattice merge, and deterministic patch replay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["ai-agent", "crdt", "json-patch", "state"]
categories = ["data-structures"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }

tirea-state-derive = { workspace = true, optional = true }

[features]
default = []
derive = ["tirea-state-derive"]

[dev-dependencies]
tirea-state-derive.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
criterion.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[[bench]]
name = "performance"
harness = false

[lints]
workspace = true
