[package]
name = "tirea"
version.workspace = true
edition = "2021"
description = "Unified umbrella crate for the tirea agent framework"
license = "MIT OR Apache-2.0"
repository.workspace = true

[dependencies]
# Always included: core contract types + state
tirea-contract.workspace = true
tirea-state.workspace = true

# Core: agent loop + orchestrator (default)
tirea-agent-loop = { workspace = true, optional = true }
tirea-agentos = { workspace = true, optional = true }

# Protocols
tirea-protocol-ag-ui = { workspace = true, optional = true }
tirea-protocol-ai-sdk-v6 = { workspace = true, optional = true }

# Extensions
tirea-extension-skills = { workspace = true, optional = true }

# Storage backends
tirea-store-adapters = { workspace = true, optional = true }

# Re-exported for prelude convenience
async-trait = "0.1"
serde = { workspace = true }
serde_json = "1"
schemars = { workspace = true }

[features]
default = ["core"]
core = ["dep:tirea-agent-loop", "dep:tirea-agentos"]
ag-ui = ["dep:tirea-protocol-ag-ui", "core"]
ai-sdk-v6 = ["dep:tirea-protocol-ai-sdk-v6"]
skills = ["dep:tirea-extension-skills", "core"]
mcp = ["core", "tirea-agentos/mcp"]
postgres = ["dep:tirea-store-adapters", "tirea-store-adapters/postgres"]
nats = ["dep:tirea-store-adapters", "tirea-store-adapters/nats"]
full = ["core", "ag-ui", "ai-sdk-v6", "skills", "mcp", "postgres", "nats"]

[dev-dependencies]
trybuild.workspace = true
criterion.workspace = true

[[bench]]
name = "message_cloning"
harness = false

[[bench]]
name = "thread_operations"
harness = false

[[bench]]
name = "quick_clone_test"
harness = false
