[package]
name = "copilotkit-starter-agent"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
tirea-examples.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
clap = { version = "4", features = ["derive", "env"] }

[[bin]]
name = "copilotkit-starter-agent"
path = "src/main.rs"
